# LixySwarm

./: .gitignore  ARQUITECTURA.md  ARQUITECTURA_DIAGRAMA.html  CODY_MEMORY.md  DIA1.md  DISTRIBUTED_PROTOCOL.md  DOLPHIN_ROADMAP.md  INTERNET_SCALE_READINESS.md  LSP_ARCHITECTURE.md  LSP_SPEC.md  ORCHESTRATOR_RUNTIME.md  PAPER_COMPLIANCE.md  PENDIENTES_2026-06-05.md  PHASE_B_REPORT.md  README.md  RUN11_REPORT.md  SECURITY.md  VPS_SETUP.md  auto_train.py  benchmark.py  generate.py  lixy_chat.py  lixy_orchestrator.py  lixyswarm-api.service  lixyswarm-seed.service  lixyswarm_cli.py  node_daemon.py  pyproject.toml  requirements.txt  swarm_publisher.py  test_ant_lifecycle.py  test_artifact_store.py  test_auto_train.py  test_bootstrap.py  test_distributed_inference.py  test_dolphin_router.py  test_edge_cases.py  test_gradient_aggregation.py  test_identity_work.py  test_integration.py  (+18 more)
api/: chat_handler.py  lsp_relay.py  main.py  swarm_state.py
frontend/: chat.html  swarm-explorer.html
references/: PLAN_DIA_1.md
src/agents/: agent_base.py  dolphin_agent.py
src/contribution/: __init__.py  resource_governor.py
src/matriarca/: matriarca.py  matriarca_legacy.py
src/matriarch/: __init__.py  matriarch.py
src/network/: __init__.py  artifact_store.py  bootstrap.py  gradient_aggregation.py  identity_work.py  lsp.py  lsp_merge.py  lsp_v2.py  lsp_v3.py  messages.py  node.py  peer_manager.py  scheduler_history.py  swarm_network.py  training_worker.py  transport.py  useful_work.py  work_protocol.py
src/release/: __init__.py  distribution.py  manifest.py
(+10 files in other folders)
